[metadata]
name = glueviz
url = http://glueviz.org
author = Glue developers
author_email = glueviz@gmail.com
classifiers =
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: BSD License
description = Multidimensional data visualization across files
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
	glue-core>=1.1.0
        glue-qt>=0.1.0
	glue-vispy-viewers>=1.0.3
